# CynMeith

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
board_patterns/: __init__.py  board_pattern.py  standard_pattern.py
config/: standard.yaml
core/: board.py  config.py  engine.py  game.py  move_history.py  move_validator.py  piece_factory.py
cynmeith/: __init__.py
cynmeith/core/: __init__.py  board.py  config.py  game.py  game_systems.py  move_effects.py  move_history.py  move_manager.py  move_validator.py  piece.py  piece_factory.py  royal_rules.py
cynmeith/utils/: __init__.py  aliases.py  coord.py  fen.py
docs/: api.md  architecture.md  examples.md  extending.md  first-game.md  index.md  overview.md  project.md  python-enough.md  quickstart.md  roadmap.md
examples/: __init__.py  tk_demo.py
examples/chess/: __init__.py  bishop.py  chess.yaml  chess_manager.py  chess_ui.py  game.py  king.py  knight.py  main.py  pawn.py  queen.py  rook.py  royal_rules.py  timetest.yaml
examples/exist/: exist.md  exist.yaml  exist_manager.py  exist_turn_policy.py  game.py  piece.py  reserve_manager.py  ui.py
examples/ui/: __init__.py  app.py  canvas.py  spec.py  widgets.py
game/: board.py
pieces/: bishop.py  king.py  knight.py  pawn.py  piece.py  piece_factory.py  queen.py  rook.py
tests/: conftest.py  test_board.py  test_config.py  test_coord.py  test_examples.py  test_exist_example.py  test_game.py  test_game_systems.py
utils/: __init__.py  aliases.py  board_pattern.py  coord.py  fen.py  fen_parser.py
(+14 files in other folders)
