[project]
name = "cynmeith"
version = "0.1.0"
description = "CynMeith - A flexible and extensible framework for simulating and playing board games."
authors = [
    {name = "cynmeiciel",email = "eplmr123duy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
types-pyyaml = "^6.0.12.20241230"
flake8 = "^7.1.2"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = false

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
